--- a/index.html
+++ b/index.html
@@ -6,7 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<div class="box" id="box-1"></div>
+<div class="box" id="box-2"></div>
+<div class="box" id="box-3"></div>
+
+<div class="blog">
+    <h2>my blog-1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio delectus sed iure dolor officia est deleniti quia
+        voluptate veniam quis.</p>
+</div>
+<div class="blog">
+    <h2>my blog-2</h2>
+    <p>Dignissimos corporis dolorem, fugiat reprehenderit quam accusantium aspernatur tempora ex alias natus omnis ipsum
+        libero iste repudiandae, perspiciatis, magni eligendi!</p>
+</div>
+<div class="blog">
+    <h2>my blog-3</h2>
+    <p>Velit dicta, earum quidem magni quo beatae adipisci inventore quam nemo impedit voluptatum, alias optio
+        necessitatibus porro obcaecati dolorem error!</p>
+</div>
+
+
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
 
 <body>
 
